--- a/intro.tex
+++ b/intro.tex
@@ -7,7 +7,7 @@ Many of our daily activities involve changing our posture to a target pose witho
 \ignorethis{\karen{Admit that this can be done and has been done through manual tuning, but emphasize that we will achieve this by automatically transfer a simulated controller to the real world. Mention the challenges of reality gap.}}
 
 
-Designing robot controllers for these tasks is extremely challenging. Achieving these tasks require complex motor skills, delicate balance strategies and rich interactions with the environments. They are often designed manually by highly-specialized engineers through a time-consuming, trial-and-error process. It involves laborious manual tuning and numerous costly robot experiments. In contrast, our system can design robot controllers automatically and requires minimal human intervention. It replaces the tedious manual tuning with automatic optimization processes, and drastically reduces the number of expensive robot experiments. Our system consists of three main components, physical simulation, controller optimization and simulation calibration. We first build a \emph{physical simulation} to simulate the dynamics of the robot and its interaction with the environments. We use \emph{controller optimization} to search for the optimal controller to fulfil the task in the simulation. However, even though this optimal controller works effectively in the simulation, it can perform poorly on a robot in the real environment. This ``Reality Gap'' \cite{Jakobi95} is caused by various simplifications in simulation algorithms, such as simplified actuator models, inaccurate physical parameters, and ignored hardware limitations, noise and latency. 
+Designing robot controllers for these tasks is extremely challenging because achieving these tasks require complex motor skills, delicate balance strategies and rich interactions with the environments. The controllers are often designed manually by highly-specialized engineers through a time-consuming, trial-and-error process. It involves laborious manual tuning and numerous costly robot experiments. In contrast, our system can design robot controllers automatically and requires minimal human intervention. It replaces the tedious manual tuning with automatic optimization processes, and drastically reduces the number of expensive robot experiments. Our system consists of three main components, physical simulation, controller optimization and simulation calibration. We first build a \emph{physical simulation} to simulate the dynamics of the robot and its interaction with the environments. We use \emph{controller optimization} to search for the optimal controller to fulfil the task in the simulation. However, even though this optimal controller works effectively in the simulation, it can perform poorly on a robot in the real environment. This ``Reality Gap'' \cite{Jakobi95} is caused by various simplifications in simulation algorithms, such as simplified actuator models, inaccurate physical parameters, and ignored hardware limitations, noise and latency. 
 
 \ignorethis{\karen{Describe our idea and how it solve the reality gap.}}
 
