--- a/intro.tex
+++ b/intro.tex
@@ -2,7 +2,16 @@
 
 \ignorethis{\karen{Need to emphasize ``dynamic balance''. Mention the challenges of these tasks in this paragraph.}}
 
-Many of our daily activities involve changing our posture to a target pose without losing balance. For example, to stand up from a chair, we carefully maintain balance while switching from a sitting to a standing pose. There are a large variety of motions of similar kind, such as lean-to-stand and kneel-to-stand. Although these tasks can be achieved with slow movements and static balance, we can perform them more agily. This agility comes from our ability to control \emph{dynamic balance}: We can use rapid movements to maintain balance even when our center of mass (COM) is outside the support polygon. Studying these agile motions can have far-reaching impacts in robotics, especially in rehabilitation, exoskeleton and humanoid robots. This paper focuses on synthesizing these agile motions on a humanoid robot.
+Many of our daily activities involve changing whole-body posture to a target pose without losing balance. For example, to rise from a chair, we carefully maintain balance while switching from a sitting to a standing pose. There are a large variety of motions of similar kind, such as lean-to-stand and kneel-to-stand. Many strategies have been identified to achieve these tasks in biomechanics studies \cite{}. On one end of spectrum, people employ stabilization strategy in which very  little momentum is generated and the center of mass (COM) is constantly supported. In this work, we are interested in the other end of the spectrum, called momentum transfer strategy, in which rapid movements are used to maintain balance even when the COM is outside the support polygon. Studying motions employing momentum transfer strategy can have far-reaching impacts in robotics, especially in rehabilitation, exoskeleton and humanoid robots. 
+
+\karen{Chair rise strategy in the functionally impaired elderly, J. Rehabilitation Research and Development, Vol 33 No 4, 1996}
+
+\karen{Hughes MA, Studenski SA, Weiner DK, Long RM . Chair rise
+strategies in the elderly . Clin Biomech 1994:9:187-92}
+\karen{Riley PO, Schenkman ML, Mann RW, Hodge WA. Mechan-
+ics of a constrained chair rise . J Biomech 1991 :24(1) :77-85}
+\karen{ Schenkman ML, Berger RA, Riley PO, Mann PW, Hodge WA. Whole body movements during rising from sitting to standing. Phys Ther 1990:70:638-51}
+%Although these tasks can be achieved with slow movements and static balance, we can perform them more agily. This agility comes from our ability to control \emph{dynamic balance}: We can use rapid movements to maintain balance even when our center of mass (COM) is outside the support polygon. Studying these agile motions can have far-reaching impacts in robotics, especially in rehabilitation, exoskeleton and humanoid robots. This paper focuses on synthesizing these agile motions on a humanoid robot.
 
 \ignorethis{\karen{Admit that this can be done and has been done through manual tuning, but emphasize that we will achieve this by automatically transfer a simulated controller to the real world. Mention the challenges of reality gap.}}
 
