add citations for Karen's edits in Introduction

--- a/icra.bib
+++ b/icra.bib
@@ -3310,3 +3310,47 @@ issn = "0027-8424",
   year={2010},
   organization={ACM}
 }
+
+@article{hughes:1996,
+  title={Chair rise strategy in the functionally impaired elderly},
+  author={Hughes, Michael A and Schenkman, Margaret L},
+  journal={Journal of rehabilitation research and development},
+  volume={33},
+  number={4},
+  pages={409},
+  year={1996},
+  publisher={Superintendent of Documents}
+}
+
+@article{hughes:1994,
+  title={Chair rise strategies in the elderly},
+  author={Hughes, MA and Weiner, DK and Schenkman, ML and Long, RM and Studenski, SA},
+  journal={Clinical Biomechanics},
+  volume={9},
+  number={3},
+  pages={187--192},
+  year={1994},
+  publisher={Elsevier}
+}
+
+@article{riley:1991,
+  title={Mechanics of a constrained chair-rise},
+  author={Riley, Patrick O and Schenkman, Margaret L and Mann, Robert W and Hodge, W Andrew},
+  journal={Journal of biomechanics},
+  volume={24},
+  number={1},
+  pages={77--85},
+  year={1991},
+  publisher={Elsevier}
+}
+
+@article{schenkman:1990,
+  title={Whole-body movements during rising to standing from sitting},
+  author={Schenkman, Margaret and Berger, Richard A and Riley, Patrick O and Mann, Robert W and Hodge, W Andrew},
+  journal={Physical Therapy},
+  volume={70},
+  number={10},
+  pages={638--648},
+  year={1990},
+  publisher={American Physical Therapy Association}
+}
