--- a/conclusion.tex
+++ b/conclusion.tex
@@ -22,7 +22,7 @@
  \end{table}
 
 
-One important component of our system is simulation calibration. The results show that our simulation calibration algorithm is effective to narrow down the Reality Gap, with a minimal number of the robot experiments. In all the examples, at most two iterations of calibration (or approximately 12 seconds of robot data) is needed before we can transfer the controller to the real robot. This amount of robot data is far less than those needed in typical system identification methods.
+One important component of our system is simulation calibration. The results show that it is effective to narrow down the Reality Gap, with a minimal number of the robot experiments. In all the examples, at most two iterations of calibration (or approximately 12 seconds of robot data) is needed before we can transfer the controller to the real robot. This amount of robot data is far less than those needed in typical system identification methods.
 
 \ignorethis{\karen{The point of the paper is to design controller that works in the real world, instead of finding the ground truth about the hardware parameters. This point needs to be made more clear in the introduction.}}
 Similar to other system identification methods, the parameters optimized in simulation calibration may not be the true physical parameters. For example, we observe that the simulation parameters optimized for the task of lean-to-stand can be different from those of kneel-to-stand. In other words, the calibrated simulator is overfitted to the current task and may not be useful for a different task. Overfitting could be a problem if the goal is to estimate the true physical parameters. However, it is not a problem in our case because the goal is to find a controller for a specific task. Actually, it is preferred because tightly coupling simulation calibration with a specific control task makes it possible to use a small amount of robot data.
